<resources>
    <string name="app_name">Labs</string>
    <string name="basic_example">Basic Example</string>
    <string name="declarative_example">Declarative Example</string>
    <string name="state_example">State Example</string>
    <string name="recomposition_example">Recomposition Example</string>
    <string name="side_effects_selection">Side Effects Selection</string>
    <string name="what_are_side_effects">What are Side Effects</string>
    <string name="launched_effect">Launched Effect</string>
    <string name="remember_coroutine_scope">rememberCoroutineScope</string>
    <string name="disposable_effect">Disposable Effect</string>
    <string name="side_effect">Side Effect</string>
    <string name="derived_state">Derived State</string>
    <string name="remember_updated_state">RememberUpdatedState</string>
    <string name="produce_state">ProduceState</string>
    <string name="snapshot_flow">SnapshotFlow</string>
    <string name="need_of_state_hoisting">Need Of State Hoisting</string>
    <string name="state_hoisting">State Hoisting</string>
    <string name="click_here">Click here</string>
    <string name="submit">Submit</string>
    <string name="show_snackbar">Show Snackbar</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_firstname">Enter firstname</string>
    <string name="enter_lastname">Enter lastname</string>
    <string name="enter_username">Enter username</string>
</resources>