<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fadeScrollbars="false"
android:paddingLeft="16dp"
android:paddingTop="16dp"
android:paddingRight="16dp"
android:paddingBottom="16dp"
tools:context=".playground.jetpack.compose.sideeffects.SideEffectsSelectionActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startWhatAreSideEffectsActivity"
        android:text="@string/what_are_side_effects"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startLaunchedEffectActivity"
        android:text="@string/launched_effect"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startRememberCoroutineScopeActivity"
        android:text="@string/remember_coroutine_scope"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startDisposableEffectActivity"
        android:text="@string/disposable_effect"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startSideEffectActivity"
        android:text="@string/side_effect"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startDerivedStateActivity"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/derived_state"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startRememberUpdatedStateActivity"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/remember_updated_state"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startProduceStateActivity"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/produce_state"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startSnapshotFlowActivity"
        android:text="@string/snapshot_flow"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textColor="@android:color/white" />

</LinearLayout>
</ScrollView>
