<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".playground.jetpack.compose.JetpackComposePlaygroundActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startBasicExampleActivity"
            android:text="@string/basic_example"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_height="wrap_content"
            android:onClick="startStateExampleActivity"
            android:text="@string/state_example"
            android:textColor="@android:color/white" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="startRecompositionActivity"
            android:text="@string/recomposition_example"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/click_me"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startSideEffectSelectionActivity"
            android:textColor="@android:color/white"
            android:text="@string/side_effects_selection" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startNeedOfStateHoistingActivity"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/need_of_state_hoisting"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="startStateHoistingActivity"
            android:text="@string/state_hoisting"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>